; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/psp/extr_psp_osal.c_ftime.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/psp/extr_psp_osal.c_ftime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeb = type { i32, i32, i32, i32 }
%struct.timeval = type { i32, i32 }
%struct.timezone = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ftime(%struct.timeb* %0) #0 {
  %2 = alloca %struct.timeb*, align 8
  %3 = alloca %struct.timeval, align 4
  %4 = alloca %struct.timezone, align 4
  store %struct.timeb* %0, %struct.timeb** %2, align 8
  %5 = call i32 @gettimeofday(%struct.timeval* %3, %struct.timezone* %4)
  %6 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.timeb*, %struct.timeb** %2, align 8
  %9 = getelementptr inbounds %struct.timeb, %struct.timeb* %8, i32 0, i32 3
  store i32 %7, i32* %9, align 4
  %10 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = sdiv i32 %11, 1000
  %13 = load %struct.timeb*, %struct.timeb** %2, align 8
  %14 = getelementptr inbounds %struct.timeb, %struct.timeb* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = getelementptr inbounds %struct.timezone, %struct.timezone* %4, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.timeb*, %struct.timeb** %2, align 8
  %18 = getelementptr inbounds %struct.timeb, %struct.timeb* %17, i32 0, i32 2
  store i32 %16, i32* %18, align 4
  %19 = getelementptr inbounds %struct.timezone, %struct.timezone* %4, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.timeb*, %struct.timeb** %2, align 8
  %22 = getelementptr inbounds %struct.timeb, %struct.timeb* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  ret i32 0
}

declare dso_local i32 @gettimeofday(%struct.timeval*, %struct.timezone*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
